<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cvProfile"
    android:background="?attr/colorOnBackground"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/icon_ibu" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/usernameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Username"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="15sp"
                        android:fontFamily="@font/montserrat_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fullnameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/ageEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/age" />

                    <TextView
                        android:id="@+id/upperBloodPressureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/upper_blood_pressure" />

                    <TextView
                        android:id="@+id/lowerBloodPressureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/lower_blood_pressure" />

                    <TextView
                        android:id="@+id/bloodSugarLevelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/blood_sugar_level" />

                    <TextView
                        android:id="@+id/bodyTemperatureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/body_temperature" />

                    <TextView
                        android:id="@+id/heartRateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/heart_rate" />

                    <TextView
                        android:id="@+id/kondisiTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/kondisi" />

                    <ImageButton
                        android:id="@+id/editButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_edit_24"
                        android:contentDescription="@string/edit_profile"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="16dp"
                        android:layout_gravity="end|bottom"
                        android:layout_marginRight="15dp"
                        android:onClick="onEditProfileClick" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/baseline_settings_24"
                        android:contentDescription="Settings Icon"
                        android:layout_marginRight="16dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/settings"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/settingsButton"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:onClick="onSettingsClick"
                        android:src="@drawable/baseline_keyboard_arrow_right_24" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/baseline_help_24"
                        android:layout_marginRight="16dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Help"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="?attr/colorPrimary" />

                    <ImageView
                        android:id="@+id/helpButton"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:onClick="onHelpClick"
                        android:src="@drawable/baseline_keyboard_arrow_right_24" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
