<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/colorOnBackground"
    tools:context=".ui.profil.edit.EditProfilActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/editProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/profile_edit"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Profile Picture Placeholder -->
    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/icon_ibu"
        android:contentDescription="Profile Picture"
        app:layout_constraintTop_toBottomOf="@id/editProfileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/profilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="?attr/colorPrimary"
            android:hint="@string/Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:hint="@string/Username" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullnameEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="?attr/colorPrimary"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Age Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="?attr/colorPrimary"
            android:hint="@string/age" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Upper Blood Pressure Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/upperBloodPressureInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/ageInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/upperBloodPressureEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:hint="@string/upper_blood_pressure" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Lower Blood Pressure Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lowerBloodPressureInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/upperBloodPressureInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lowerBloodPressureEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="?attr/colorPrimary"
            android:hint="@string/lower_blood_pressure" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Blood Sugar Level Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bloodSugarLevelInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/lowerBloodPressureInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bloodSugarLevelEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="?attr/colorPrimary"
            android:hint="@string/blood_sugar_level" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Body Temperature Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bodyTemperatureInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/bloodSugarLevelInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bodyTemperatureEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/body_temperature" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Heart Rate Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heartRateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/bodyTemperatureInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heartRateEditText"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:background="@drawable/edit_text_background"
            android:hint="@string/heart_rate" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorButtonNormal"
        app:layout_constraintTop_toBottomOf="@id/heartRateInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="?attr/colorPrimaryVariant" />

</androidx.constraintlayout.widget.ConstraintLayout>
