<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/colorOnBackground"
    tools:context=".ui.profil.settings.SettingsActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/tv_dark_mode_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/dark_mode"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintHorizontal_bias="0"/>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_dark_mode_label"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dark_mode_label"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?attr/colorTertiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dark_mode_label"
        android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_app_version_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/appVersion"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_app_version_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/app_version"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_version_label"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?attr/colorTertiary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_version_value"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:onClick="onLogOutClick"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_logout"
        app:layout_constraintBottom_toBottomOf="@+id/tv_logout"/>

</androidx.constraintlayout.widget.ConstraintLayout>